Added image files and initial placement on webpage

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>Pannkakor recept</title>
     </head>
     <body>
+        <img src="images/pannkakor_main.webp" alt="Pancakes served on a plate with raspberries and cream on top." />
         <h3>Enkelt recept på pannkakor</h3>
         <p>Gör traditionella tunna pannkakor med detta enkla och goda pannkaksrecept.</p>
         <h4>Ingredienser (4 port)</h4>
@@ -27,6 +28,8 @@
             <li>Servera med sylt, bär eller frukt</li>
         </ol>
         <h4>Serveringsförslag</h4>
+        <img src="images/servering_1.webp" alt="Pancakes served on a plate with cream and a lemon on the side.">
+        <img src="images/servering_2.webp" alt="Two pancakes served on a white plate with cream and a peeled lemon slice on top.">
     </body>
 </html>
 
