Basic formatting of text and first introduction of div structure

--- a/index.html
+++ b/index.html
@@ -1,35 +1,49 @@
 <!doctype html>
-<html lang="en-US">
+<html lang="sv">
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width" />
         <title>Pannkakor recept</title>
+        <link href="styles/style.css" rel="stylesheet" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     </head>
     <body>
         <img src="images/pannkakor_main.webp" alt="Pancakes served on a plate with raspberries and cream on top." />
-        <h3>Enkelt recept på pannkakor</h3>
-        <p>Gör traditionella tunna pannkakor med detta enkla och goda pannkaksrecept.</p>
-        <h4>Ingredienser (4 port)</h4>
-        <ul>
-            <li>2 1/2 dl vetemjöl</li>
-            <li>1/2 tsk salt</li>
-            <li>6 dl mjölk</li>
-            <li>3 ägg</li>
-            <li>smör (till stekning)</li>
-            <li>sylt, bär eller frukt till servering</li>
-        </ul>
-        <h4>så här gör du</h4>
-        <ol>
-            <li>Blanda mjöl och salt i en bunke.</li>
-            <li>Vispa i hälften av mjölken och vispa till en slät smet.</li>
-            <li>Vispa i resten av mjölken och äggen.</li>
-            <li>Låt smeten vila ca 10 minuter.</li>
-            <li>Stek tunna pannkakor i lite smör, för varje pannkaka, i en stek- eller pannkakspanna.</li>
-            <li>Servera med sylt, bär eller frukt</li>
-        </ol>
-        <h4>Serveringsförslag</h4>
-        <img src="images/servering_1.webp" alt="Pancakes served on a plate with cream and a lemon on the side.">
-        <img src="images/servering_2.webp" alt="Two pancakes served on a white plate with cream and a peeled lemon slice on top.">
+        <article>
+            <h1>Enkelt recept på pannkakor</h1>
+            <div class="note-card">
+                <p>Gör traditionella tunna pannkakor med detta enkla och goda pannkaksrecept.</p>
+            </div>
+            <section class="ingredients">
+                <h2>Ingredienser<span class="notbold"> (4 port)</span></h2>
+                <ul>
+                    <li>2 1/2 dl vetemjöl</li>
+                    <li>1/2 tsk salt</li>
+                    <li>6 dl mjölk</li>
+                    <li>3 ägg</li>
+                    <li>smör (till stekning)</li>
+                    <li>sylt, bär eller frukt till servering</li>
+                </ul>
+            </section>
+            <section class="instructions">
+                <h2>Så här gör du</h2>
+                <ol>
+                    <li>Blanda mjöl och salt i en bunke.</li>
+                    <li>Vispa i hälften av mjölken och vispa till en slät smet.</li>
+                    <li>Vispa i resten av mjölken och äggen.</li>
+                    <li>Låt smeten vila ca 10 minuter.</li>
+                    <li>Stek tunna pannkakor i lite smör, för varje pannkaka, i en stek- eller pannkakspanna.</li>
+                    <li>Servera med sylt, bär eller frukt</li>
+                </ol>
+            </section>
+            <section class="serving-suggestions">
+                <h2>Serveringsförslag</h2>
+                <img src="images/servering_1.webp" alt="Pancakes served on a plate with cream and a lemon on the side.">
+                <img src="images/servering_2.webp" alt="Two pancakes served on a white plate with cream and a peeled lemon slice on top.">
+            </section>
+        </article>
     </body>
 </html>
 
