--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     </head>
     <body>
-        <img src="images/pannkakor_main.webp" alt="Pancakes served on a plate with raspberries and cream on top." />
+        <header class="headline-img">
+            <img src="images/pannkakor_main.webp" alt="Pancakes served on a plate with raspberries and cream on top." />
+        </header>
         <article>
-            <h1>Enkelt recept på pannkakor</h1>
-            <div class="note-card">
-                <p>Gör traditionella tunna pannkakor med detta enkla och goda pannkaksrecept.</p>
-            </div>
+            <section class="description">
+                <h1>Enkelt recept på pannkakor</h1>
+                <p class="note-card">Gör traditionella tunna pannkakor med detta enkla och goda pannkaksrecept.</p>
+            </section>
             <section class="ingredients">
                 <h2>Ingredienser<span class="notbold"> (4 port)</span></h2>
                 <ul>
@@ -40,8 +42,10 @@
             </section>
             <section class="serving-suggestions">
                 <h2>Serveringsförslag</h2>
-                <img src="images/servering_1.webp" alt="Pancakes served on a plate with cream and a lemon on the side.">
-                <img src="images/servering_2.webp" alt="Two pancakes served on a white plate with cream and a peeled lemon slice on top.">
+                <figure class="serving-suggestions">
+                    <img src="images/servering_1.webp" alt="Pancakes served on a plate with cream and a lemon on the side.">
+                    <img src="images/servering_2.webp" alt="Two pancakes served on a white plate with cream and a peeled lemon slice on top.">
+                </figure>
             </section>
         </article>
     </body>
