--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="sv">
     <head>
         <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="author" content="James Plimmer" />
+        <meta name="description" content="Pannkaksrecept" />
         <title>Pannkakor recept</title>
         <link href="styles/style.css" rel="stylesheet" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -10,44 +12,46 @@
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     </head>
     <body>
-        <header class="headline-img">
-            <img src="images/pannkakor_main.webp" alt="Pancakes served on a plate with raspberries and cream on top." />
-        </header>
-        <article>
-            <section class="description">
-                <h1>Enkelt recept på pannkakor</h1>
-                <p class="note-card">Gör traditionella tunna pannkakor med detta enkla och goda pannkaksrecept.</p>
-            </section>
-            <section class="ingredients">
-                <h2>Ingredienser<span class="notbold"> (4 port)</span></h2>
-                <ul>
-                    <li>2 1/2 dl vetemjöl</li>
-                    <li>1/2 tsk salt</li>
-                    <li>6 dl mjölk</li>
-                    <li>3 ägg</li>
-                    <li>smör (till stekning)</li>
-                    <li>sylt, bär eller frukt till servering</li>
-                </ul>
-            </section>
-            <section class="instructions">
-                <h2>Så här gör du</h2>
-                <ol>
-                    <li>Blanda mjöl och salt i en bunke.</li>
-                    <li>Vispa i hälften av mjölken och vispa till en slät smet.</li>
-                    <li>Vispa i resten av mjölken och äggen.</li>
-                    <li>Låt smeten vila ca 10 minuter.</li>
-                    <li>Stek tunna pannkakor i lite smör, för varje pannkaka, i en stek- eller pannkakspanna.</li>
-                    <li>Servera med sylt, bär eller frukt</li>
-                </ol>
-            </section>
-            <section class="serving-suggestions">
-                <h2>Serveringsförslag</h2>
-                <figure class="serving-suggestions">
-                    <img src="images/servering_1.webp" alt="Pancakes served on a plate with cream and a lemon on the side.">
-                    <img src="images/servering_2.webp" alt="Two pancakes served on a white plate with cream and a peeled lemon slice on top.">
-                </figure>
-            </section>
-        </article>
+        <main>
+            <figure class="headline-img">
+                <img src="images/pannkakor_main.webp" alt="Pannkakor serverade på en tallrik med hallon och grädde på toppen." />
+            </figure>
+            <article>
+                <header class="description">
+                    <h1>Enkelt recept på pannkakor</h1>
+                    <p class="note-card">Gör traditionella tunna pannkakor med detta enkla och goda pannkaksrecept.</p>
+                </header>
+                <section class="ingredients">
+                    <h2>Ingredienser<span class="notbold"> (4 port)</span></h2>
+                    <ul>
+                        <li>2 1/2 dl vetemjöl</li>
+                        <li>1/2 tsk salt</li>
+                        <li>6 dl mjölk</li>
+                        <li>3 ägg</li>
+                        <li>smör (till stekning)</li>
+                        <li>sylt, bär eller frukt till servering</li>
+                    </ul>
+                </section>
+                <section class="instructions">
+                    <h2>Så här gör du</h2>
+                    <ol>
+                        <li>Blanda mjöl och salt i en bunke.</li>
+                        <li>Vispa i hälften av mjölken och vispa till en slät smet.</li>
+                        <li>Vispa i resten av mjölken och äggen.</li>
+                        <li>Låt smeten vila ca 10 minuter.</li>
+                        <li>Stek tunna pannkakor i lite smör, för varje pannkaka, i en stek- eller pannkakspanna.</li>
+                        <li>Servera med sylt, bär eller frukt.</li>
+                    </ol>
+                </section>
+                <section class="serving-suggestions">
+                    <h2>Serveringsförslag</h2>
+                    <figure class="serving-suggestions">
+                        <img src="images/servering_1.webp" alt="Pannkakor serverade på en tallrik med grädde och citron på sidan.">
+                        <img src="images/servering_2.webp" alt="Två pannkakor serverade på en vit tallrik med grädde och en skalad citronskiva på toppen.">
+                    </figure>
+                </section>
+            </article>
+        </main>
     </body>
 </html>
 
