--- a/index.html
+++ b/index.html
@@ -1,28 +1,33 @@
 <!doctype html>
 <html lang="sv">
     <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="author" content="James Plimmer" />
-        <meta name="description" content="Pannkaksrecept" />
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="author" content="James Plimmer">
+        <meta name="description" content="Pannkaksrecept">
         <title>Pannkakor recept</title>
-        <link href="styles/style.css" rel="stylesheet" />
+        <link href="styles/style.css" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+        <style>
+            :where(h1) {
+                font-size: 2em;
+            }
+        </style>
     </head>
     <body>
         <main>
             <figure class="headline-img">
-                <img src="images/pannkakor_main.webp" alt="Pannkakor serverade på en tallrik med hallon och grädde på toppen." />
+                <img src="images/pannkakor_main.webp" alt="">
             </figure>
             <article>
                 <header class="description">
                     <h1>Enkelt recept på pannkakor</h1>
-                    <p class="note-card">Gör traditionella tunna pannkakor med detta enkla och goda pannkaksrecept.</p>
+                    <p class="summary-card">Gör traditionella tunna pannkakor med detta enkla och goda pannkaksrecept.</p>
                 </header>
                 <section class="ingredients">
-                    <h2>Ingredienser<span class="notbold"> (4 port)</span></h2>
+                    <h2>Ingredienser<span class="not-bold"> (4 port)</span></h2>
                     <ul>
                         <li>2 1/2 dl vetemjöl</li>
                         <li>1/2 tsk salt</li>
