Renamed portion span semantically

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <p class="summary-card">Gör traditionella tunna pannkakor med detta enkla och goda pannkaksrecept.</p>
                 </header>
                 <section class="ingredients">
-                    <h2>Ingredienser<span class="not-bold"> (4 port)</span></h2>
+                    <h2>Ingredienser<span class="portions"> (4 port)</span></h2>
                     <ul>
                         <li>2 1/2 dl vetemjöl</li>
                         <li>1/2 tsk salt</li>
