Split serving suggestions into separate figures

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <figure class="headline-img">
                 <img src="images/pannkakor_main.webp" alt="">
             </figure>
-            <article>
+            <article class="recipe">
                 <header class="description">
                     <h1>Enkelt recept på pannkakor</h1>
                     <p class="summary-card">Gör traditionella tunna pannkakor med detta enkla och goda pannkaksrecept.</p>
@@ -50,10 +50,14 @@
                 </section>
                 <section class="serving-suggestions">
                     <h2>Serveringsförslag</h2>
-                    <figure class="serving-suggestions">
-                        <img src="images/servering_1.webp" alt="Pannkakor serverade på en tallrik med grädde och citron på sidan.">
-                        <img src="images/servering_2.webp" alt="Två pannkakor serverade på en vit tallrik med grädde och en skalad citronskiva på toppen.">
-                    </figure>
+                    <div class="serving-suggestions-images">
+                        <figure class="serving-suggestions">
+                            <img src="images/servering_1.webp" alt="Pannkakor serverade på en tallrik med grädde och citron på sidan.">
+                        </figure>
+                        <figure class="serving-suggestions">
+                            <img src="images/servering_2.webp" alt="Två pannkakor serverade på en vit tallrik med grädde och en skalad citronskiva på toppen.">
+                        </figure>
+                    </div>
                 </section>
             </article>
         </main>
