Renamed classes according to BEM model

--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
                 </section>
                 <section class="serving-suggestions">
                     <h2>Serveringsförslag</h2>
-                    <div class="serving-suggestions-images">
-                        <figure class="serving-suggestions">
+                    <div class="serving-suggestions__images">
+                        <figure class="serving-suggestions__fig">
                             <img src="images/servering_1.webp" alt="Pannkakor serverade på en tallrik med grädde och citron på sidan.">
                         </figure>
-                        <figure class="serving-suggestions">
+                        <figure class="serving-suggestions__fig">
                             <img src="images/servering_2.webp" alt="Två pannkakor serverade på en vit tallrik med grädde och en skalad citronskiva på toppen.">
                         </figure>
                     </div>
