--- a/index.html
+++ b/index.html
@@ -19,7 +19,15 @@
     <body>
         <main>
             <figure class="headline-img">
-                <img src="images/pannkakor_main.webp" alt="">
+                <img src="images/pannkakor_main.webp"
+                     srcset="images/pannkakor_main_450w.webp 450w,
+                             images/pannkakor_main_700w.webp 700w,
+                             images/pannkakor_main.webp 1015w,
+                             images/pannkakor_main_1300w.webp 1300w,
+                             images/pannkakor_main_1600w.webp 1600w,
+                             images/pannkakor_main_1900w.webp 1900w"
+                     sizes="(min-width: 460px) 67vw, 167vw"
+                     alt="">
             </figure>
             <article class="recipe">
                 <header class="description">
@@ -52,10 +60,19 @@
                     <h2>Serveringsförslag</h2>
                     <div class="serving-suggestions__images">
                         <figure class="serving-suggestions__fig">
-                            <img src="images/servering_1.webp" alt="Pannkakor serverade på en tallrik med grädde och citron på sidan.">
+                            <img src="images/servering_1.webp"
+                                 srcset="images/servering_1_450w.webp 450w,
+                                         images/servering_1_700w.webp 700w"
+                                 sizes="(min-width: 2460px) 700px, 
+                                        (min-width: 460px) 28.74vw, 
+                                        calc(100vw - 40px)"
+                                 alt="Pannkakor serverade på en tallrik med grädde och citron på sidan."
+                                 loading="lazy">
                         </figure>
                         <figure class="serving-suggestions__fig">
-                            <img src="images/servering_2.webp" alt="Två pannkakor serverade på en vit tallrik med grädde och en skalad citronskiva på toppen.">
+                            <img src="images/servering_2.webp"
+                                 alt="Två pannkakor serverade på en vit tallrik med grädde och en skalad citronskiva på toppen."
+                                 loading="lazy">
                         </figure>
                     </div>
                 </section>
