Re-added alt text for headline-img

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
                      alt="">
             </figure>
             <article class="recipe">
-                <header class="description">
+                <hgroup class="description">
                     <h1>Enkelt recept på pannkakor</h1>
                     <p class="summary-card">Gör traditionella tunna pannkakor med detta enkla och goda pannkaksrecept.</p>
-                </header>
+                </hgroup>
                 <section class="ingredients">
                     <h2>Ingredienser<span class="portions"> (4 port)</span></h2>
                     <ul>
