Used hgroup instead of span for portion heading

--- a/index.html
+++ b/index.html
@@ -27,15 +27,18 @@
                              images/pannkakor_main_1600w.webp 1600w,
                              images/pannkakor_main_1900w.webp 1900w"
                      sizes="(min-width: 460px) 67vw, 167vw"
-                     alt="">
+                     alt="Tunna pannkakor serverade på en tallrik med hallon och grädde på toppen.">
             </figure>
             <article class="recipe">
-                <hgroup class="description">
+                <header class="description">
                     <h1>Enkelt recept på pannkakor</h1>
                     <p class="summary-card">Gör traditionella tunna pannkakor med detta enkla och goda pannkaksrecept.</p>
-                </hgroup>
+                </header>
                 <section class="ingredients">
-                    <h2>Ingredienser<span class="portions"> (4 port)</span></h2>
+                    <hgroup class="ingredients__heading">
+                        <h2>Ingredienser</h2>
+                        <p class="portions">(4 port)</p>
+                    </hgroup>
                     <ul>
                         <li>2 1/2 dl vetemjöl</li>
                         <li>1/2 tsk salt</li>
