Added reset.css and adjusted style.css to match
Added reset.css file and link;
Adjusted style.css declarations for reset.css impact (e.g. margins, font-weight);
Changed html element font-size to 100% for accessibility;
Added Arial as fallback before sans-serif;
Limited main width with min function;

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="author" content="James Plimmer">
         <meta name="description" content="Pannkaksrecept">
         <title>Pannkakor recept</title>
+        <link href="styles/reset.css" rel="stylesheet">
         <link href="styles/style.css" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,14 +22,14 @@
             <article class="recipe">
                 <figure class="headline-img">
                     <img src="images/pannkakor_main.webp"
-                        srcset="images/pannkakor_main_450w.webp 450w,
-                                images/pannkakor_main_700w.webp 700w,
-                                images/pannkakor_main.webp 1015w,
-                                images/pannkakor_main_1300w.webp 1300w,
-                                images/pannkakor_main_1600w.webp 1600w,
-                                images/pannkakor_main_1900w.webp 1900w"
-                        sizes="(min-width: 460px) 67vw, 167vw"
-                        alt="Tunna pannkakor serverade på en tallrik med hallon och grädde på toppen.">
+                         srcset="images/pannkakor_main_450w.webp 450w,
+                                 images/pannkakor_main_700w.webp 700w,
+                                 images/pannkakor_main.webp 1015w,
+                                 images/pannkakor_main_1300w.webp 1300w,
+                                 images/pannkakor_main_1600w.webp 1600w,
+                                 images/pannkakor_main_1900w.webp 1900w"
+                         sizes="(min-width: 460px) 67vw, 167vw"
+                         alt="Tunna pannkakor serverade på en tallrik med hallon och grädde på toppen.">
                 </figure>
                 <header class="description">
                     <h1>Enkelt recept på pannkakor</h1>
@@ -62,21 +63,27 @@
                 <section class="serving-suggestions">
                     <h2>Serveringsförslag</h2>
                     <div class="serving-suggestions__images">
-                        <figure class="serving-suggestions__fig">
-                            <img src="images/servering_1.webp"
-                                 srcset="images/servering_1_450w.webp 450w,
-                                         images/servering_1_700w.webp 700w"
-                                 sizes="(min-width: 2460px) 700px, 
-                                        (min-width: 460px) 28.74vw, 
-                                        calc(100vw - 40px)"
-                                 alt="Pannkakor serverade på en tallrik med grädde och citron på sidan."
-                                 loading="lazy">
-                        </figure>
-                        <figure class="serving-suggestions__fig">
-                            <img src="images/servering_2.webp"
-                                 alt="Två pannkakor serverade på en vit tallrik med grädde och en skalad citronskiva på toppen."
-                                 loading="lazy">
-                        </figure>
+                        <!-- <ul>
+                            <li> -->
+                                <figure class="serving-suggestions__fig">
+                                    <img src="images/servering_1.webp"
+                                         srcset="images/servering_1_450w.webp 450w,
+                                                 images/servering_1_700w.webp 700w"
+                                         sizes="(min-width: 2460px) 700px,
+                                                (min-width: 460px) 28.74vw,
+                                                calc(100vw - 40px)"
+                                         alt="Pannkakor serverade på en tallrik med grädde och citron på sidan."
+                                         loading="lazy">
+                                </figure>
+                            <!-- </li>
+                            <li> -->
+                                <figure class="serving-suggestions__fig">
+                                    <img src="images/servering_2.webp"
+                                         alt="Två pannkakor serverade på en vit tallrik med grädde och en skalad citronskiva på toppen."
+                                         loading="lazy">
+                                </figure>
+                            <!-- </li>
+                        </ul> -->
                     </div>
                 </section>
             </article>
