Wrapped serving suggestion figures in a ul

--- a/index.html
+++ b/index.html
@@ -62,10 +62,9 @@
                 </section>
                 <section class="serving-suggestions">
                     <h2>Serveringsförslag</h2>
-                    <div class="serving-suggestions__images">
-                        <!-- <ul>
-                            <li> -->
-                                <figure class="serving-suggestions__fig">
+                        <ul class="serving-suggestions__list" role="list">
+                            <li>
+                                <figure>
                                     <img src="images/servering_1.webp"
                                          srcset="images/servering_1_450w.webp 450w,
                                                  images/servering_1_700w.webp 700w"
@@ -75,16 +74,15 @@
                                          alt="Pannkakor serverade på en tallrik med grädde och citron på sidan."
                                          loading="lazy">
                                 </figure>
-                            <!-- </li>
-                            <li> -->
-                                <figure class="serving-suggestions__fig">
+                            </li>
+                            <li>
+                                <figure>
                                     <img src="images/servering_2.webp"
                                          alt="Två pannkakor serverade på en vit tallrik med grädde och en skalad citronskiva på toppen."
                                          loading="lazy">
                                 </figure>
-                            <!-- </li>
-                        </ul> -->
-                    </div>
+                            </li>
+                        </ul>
                 </section>
             </article>
         </main>
